--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
   <div id = "calendar"></div>
   <div id = "header">
-    <h1>To-Do List V1</h1>
-    <button id="add-btn">+</button>
+    <span id="todotitle">To-Do List V1</span>
+    <span id="add-btn">+</span>
+    
   </div>
   <div id = "content"></div>
   
