--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id = "calendar"></div>
+  <div id = "calendar">
+    <span id="prev-btn">◀</span>
+    <span id="next-btn">▶</span>
+  </div>
   <div id = "header">
     <span id="todotitle">To-Do List V1</span>
     <span id="add-btn">+</span>
